함수 선언, 맵 초기 상태 설정, 화면 출력, 자원 초기화, 커서 초기화, 맵 초기화

--- a/과제중간제출.vcxproj
+++ b/과제중간제출.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="중간제출.c" />
+    <ClCompile Include="main.c" />
+    <ClCompile Include="display.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="display.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
